Added JSON sample to the Demo page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>jQuery JSON Plugin / Demo</title>
     <link rel="stylesheet" href="css/demo.css"/>
 </head>
 <body>
-    <h1 class="title">Your input</h1> (Enter a JSON value)
+    <h1 class="title">Your input</h1>
+    (Enter a JSON value)
+    <a class="json-sample" href="#">Sample</a>
 
     <div id="mode-container">
         <label for="mode">Mode</label>
